
Small changes:
- When a MUF is clicked, any spell targeting in progress is canceled.
- The MUFs react upon mouse button release instead of mouse button press.
- When adding an affliction to the filter, the entered name is trimmed.
- It is now possible to move the "Decursive" bar maintaining the key Alt pushed with the buttons hidden.


Fixed bug:
- The status tool-tip was not displayed if the live-list was hidden.
- When Waterfall displays disabled 'range' options it calls the 'set' method anyway, this caused a problem when the live-list or the MUFs were disabled...
- Warlock pet detection could fail in some conditions.
- Default Warrior ignored debuffs were not used because of a spelling mistake.


Changes from Decursive 2.0 BETA 6-Pub to Decursive 2.0 BETA 6-Pub-fixed

- Fixed several problems with the curing order priority system.


Changes from Decursive 2.0 BETA 5 to 2.0 BETA 6-Pub

    # Important changes:

- Now you need to press Alt to move the MUFs clicking the handle.
- Now a border is displayed around the MUFs, its color depends on the unit's class.
- When a unit is charmed, a small green square is displayed inside its MUF.
- A new static option panel is available by ALT-RIGHT-CLICKING on the handle or typing /dcroptions (Ace2 Waterfall library).
- Added two new sets of options:
    - Class border and center transparency can be set separately.
    - Spacing between MUFs can be changed.
- Paladin always uses Cleanse instead of Purify (if they learned Cleanse).
- There is no longer a default key bound to the macro, this caused too many problems with people not knowing how to change it.
- You can bind a key to show/hide the micro-unit frames.
- In the debuff filtering system, you can now ignore a debuff permanently and not only when in combat.

    # Minor changes:

- MUFs display can be reversed (they will display from bottom to top instead of top to bottom).