@@ -192,6 +192,8 @@ L:RegisterTranslations("zhCN", function() return {
     [Dcr.LOC.OPT_UNITPERLINES_DESC] = Dcr.LOC.OPT_UNITPERLINES_DESC,
     [Dcr.LOC.OPT_MFSCALE] = Dcr.LOC.OPT_MFSCALE,
     [Dcr.LOC.OPT_MFSCALE_DESC] = Dcr.LOC.OPT_MFSCALE_DESC,
+    [Dcr.LOC.OPT_LLSCALE] = Dcr.LOC.OPT_LLSCALE,
+    [Dcr.LOC.OPT_LLSCALE_DESC] = Dcr.LOC.OPT_LLSCALE_DESC,
     [Dcr.LOC.OPT_SHOWHELP] = Dcr.LOC.OPT_SHOWHELP,
     [Dcr.LOC.OPT_SHOWHELP_DESC] = Dcr.LOC.OPT_SHOWHELP_DESC,
     [Dcr.LOC.OPT_MFPERFOPT] = Dcr.LOC.OPT_MFPERFOPT,
@@ -244,6 +246,9 @@ L:RegisterTranslations("zhCN", function() return {
 
     [Dcr.LOC.OPT_MFALPHA] = OPT_MFALPHA,
     [Dcr.LOC.OPT_MFALPHA_DESC] = OPT_MFALPHA_DESC,
+    
+    [Dcr.LOC.OPT_LLALPHA] = Dcr.LOC.OPT_LLALPHA,
+    [Dcr.LOC.OPT_LLALPHA_DESC] = Dcr.LOC.OPT_LLALPHA_DESC,
 
     [Dcr.LOC.OPT_ADVDISP] = Dcr.LOC.OPT_ADVDISP,
     [Dcr.LOC.OPT_ADVDISP_DESC] = Dcr.LOC.OPT_ADVDISP_DESC,
